--- a/build.gradle
+++ b/build.gradle
@@ -20,7 +20,9 @@ dependencies {
     testCompile 'junit:junit:4.11'
     testCompile "info.cukes:cucumber-junit:$cucumberVersion"
     testCompile "info.cukes:cucumber-groovy:$cucumberVersion"
+    testCompile "info.cukes:cucumber-core:$cucumberVersion"
     compile group: 'net.masterthought', name: 'cucumber-reporting', version: '3.4.0'
+    compile group: 'com.codeborne', name: 'selenide', version: '4.2'
 }
 
 task cucumber() {
